--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
 <html>
-	<head>
-		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="/static/style.css">
-	</head>
-	<body>
-		{{ template "content" . }}
-	</body>
+<head>
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,800italic,800,700italic,700,600italic,600,400italic,300italic,300" rel="stylesheet" type="text/css">
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="/static/style.css" rel="stylesheet">
+</head>
+<body>
+	{{ template "content" . }}
+</body>
 </html>
